--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "darkowls",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Site oficial da Atlética do UNIFESO.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Katreque/darkowls.git"
@@ -16,7 +12,15 @@
     "url": "https://github.com/Katreque/darkowls/issues"
   },
   "homepage": "https://github.com/Katreque/darkowls#readme",
-  "devDependencies": {
-    "gulp": "^3.9.1"
+  "dependencies": {
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-scripts": "1.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
