--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/Katreque/darkowls/issues"
   },
-  "homepage": "https://github.com/Katreque/darkowls#readme",
+  "homepage": "https://darkowls.netlify.com/",
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
